--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/PVE/HybrisaColony/novamedica_doctor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/PVE/HybrisaColony/novamedica_doctor.yml
@@ -5,6 +5,8 @@
   name: rmc-job-name-novamed-doctor
   description: rmc-job-description-novamed-doctor
   playTimeTracker: RMCJobPVENovaMedicaDoctor
+  ranks:
+    RMCRankCivilian: []
   startingGear: RMCGearPVENovaMedicaDoctor
   icon: "RMCJobIconPVENovaMedicaDoctor"
   joinNotifyCrew: false
