--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/PVE/HybrisaColony/novamedica_doctor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/PVE/HybrisaColony/novamedica_doctor.yml
@@ -34,7 +34,7 @@
   id: RMCGearPVENovaMedicaDoctor
   equipment:
     mask: CMMaskSterile
-    ears: CMHeadsetColony
+    ears: RMCHeadsetColonyIcons
     jumpsuit: CMJumpsuitLiaison
     outerClothing: RMCLabcoat
     gloves: CMHandsLatex
