Changes Mortar guide to structures, renames the guide to just mortar instead of mortar operator

--- a/Resources/Prototypes/_RMC14/Guidebook/rmc_guidebook.yml
+++ b/Resources/Prototypes/_RMC14/Guidebook/rmc_guidebook.yml
@@ -44,7 +44,6 @@
   - RMCGuideRoleMaintenanceTechnician
   - RMCGuideRoleSGO
   - RMCGuideCommandRoles
-  - RMCGuideRoleMortar
   - RMCGuideRoleSpec
 
 # marine structures
@@ -55,6 +54,7 @@
   text: "/ServerInfo/Guidebook/_RMC14/RMC14.xml"
   children:
   - RMCGuideCommunicationsTowers
+  - RMCGuideRoleMortar
 
 # cooking
 - type: guideEntry
@@ -169,7 +169,7 @@
   parent: RMC
   id: RMCGuideRoleMortar
   priority: 11
-  name: "Mortar Operator"
+  name: "Mortar"
   text: "/ServerInfo/Guidebook/_RMC14/Guides/RMCGuideRoleMortar.xml"
 
 - type: guideEntry
