--- a/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
@@ -224,7 +224,7 @@
     - Helmet
     - Goggles
     - Armor
-    radio: RoyalMarine
+    radio: TSE
     minimapBackground:
       sprite: _RMC14/Interface/map_blips.rsi
       state: background_twe
