--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/PVE/HybrisaColony/hybrisa_civilian.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/PVE/HybrisaColony/hybrisa_civilian.yml
@@ -1,6 +1,6 @@
 ﻿- type: job
   parent: CMJobBase
-  id: RMCJobPVEHybrisaCivilian
+  id: RMCPVEHybrisaCivilian
   name: rmc-job-name-hybrisa-civilian
   description: rmc-job-description-hybrisa-civilian
   playTimeTracker: RMCJobPVEHybrisaCivilian
