--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CLF/clf_soldier.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CLF/clf_soldier.yml
@@ -52,7 +52,8 @@
     head: RMCArmorHelmetSecurity
     mask: RMCM5Bayonet # TODO RMC14
     ears: RMCHeadsetDistressDukes
-    jumpsuit: JumpsuitMarine # TOOD RMC14
+    jumpsuit: RMCJumpsuitCLFSoldier
+    neck: RMCCLFArmband
     outerClothing: RMCArmorVestNone
     gloves: ClothingHandsGlovesLeather
     shoes: RMCShoesBrown
