--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Uniforms/other.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Uniforms/other.yml
@@ -211,9 +211,8 @@
 - type: entity
   parent: RMCMarineUniformBase
   id: RMCJumpsuitCLFSoldier
-  name: colonist uniform
-  description: A bruised and tattered colonist uniform.
-  suffix: CLF
+  name: Colonial Liberation Front uniform
+  description: A stylish grey-green jumpsuit - standard issue for colonists. This version appears to have the symbol of the Colonial Liberation Front emblazoned in select areas.
   components:
   - type: Sprite
     sprite: _RMC14/Objects/Clothing/Uniforms/Survivor/clf.rsi
