--- a/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
@@ -216,7 +216,7 @@
     FoodMeatFish: 1
     FoodCheeseSlice: 1
 
-- type: microwaveMealRecipe
+- type: microwaveMealRecipe #added to metamorph recipes
   id: RecipeFiveBurger
   name: five alarm burger recipe
   result: FoodBurgerFive
@@ -290,7 +290,7 @@
     FoodBreadBun: 1
     ClothingMaskMime: 1
 
-- type: microwaveMealRecipe
+- type: microwaveMealRecipe #added to metamorph recipes
   id: RecipePlainBurger
   name: plain burger recipe
   result: FoodBurgerPlain
@@ -350,6 +350,7 @@
   group: Savory
   reagents:
     TableSalt: 5
+    Blackpepper: 5
     Egg: 12
   solids:
     FoodBreadBun: 1
@@ -667,7 +668,7 @@
 - type: microwaveMealRecipe
   id: RecipeMargheritaPizza
   name: margherita pizza recipe
-  result: FoodPizzaMargherita
+  result: RMCFoodPizzaMargheritaFull
   time: 30
   group: Pizza
   solids:
@@ -678,7 +679,7 @@
 - type: microwaveMealRecipe
   id: RecipeMushroomPizza
   name: mushroom pizza recipe
-  result: FoodPizzaMushroom
+  result: RMCFoodPizzaMushroomFull
   time: 30
   group: Pizza
   solids:
@@ -688,7 +689,7 @@
 - type: microwaveMealRecipe
   id: RecipeMeatPizza
   name: meat pizza recipe
-  result: FoodPizzaMeat
+  result: RMCFoodPizzaMeatFull
   time: 30
   group: Pizza
   solids:
@@ -700,7 +701,7 @@
 - type: microwaveMealRecipe
   id: RecipeVegetablePizza
   name: vegetable pizza recipe
-  result: FoodPizzaVegetable
+  result: RMCFoodPizzaVegetableFull
   time: 30
   group: Pizza
   solids:
@@ -1299,12 +1300,11 @@
   time: 15
   group: Pie
   reagents:
-    Gold: 10
     Sugar: 5
     Milk: 5
   solids:
     FoodDoughPie: 1
-    FoodApple: 2 #in absence of the real gapple i'm substituting one apple with 10u gold (one ingot)
+    RMCFoodGoldenApple: 2
     FoodPlateTin: 1
 
 - type: microwaveMealRecipe
@@ -2349,6 +2349,29 @@
     FoodButterSlice: 1
 
 - type: microwaveMealRecipe
+  id: RecipeCannoli
+  name: cannoli recipe
+  result: FoodBakedCannoli
+  time: 10
+  group: Dessert
+  solids:
+    FoodDoughFlat: 1
+    FoodSnackChocolateBar: 1
+  reagents:
+    Cream: 5
+
+- type: microwaveMealRecipe
+  id: RecipeHoneyBun
+  name: honey bun recipe
+  result: FoodBakedBunHoney
+  time: 10
+  group: Dessert
+  solids:
+    FoodDoughSlice: 1
+  reagents:
+    Sugar: 5
+
+- type: microwaveMealRecipe
   id: RecipeCroissantCotton
   name: cotton croissant recipe
   result: FoodBakedCroissantCotton
@@ -2407,3 +2430,12 @@
     FoodCheeseSlice: 1
     FoodButterSlice: 1
 
+- type: microwaveMealRecipe
+  id: RecipeCornedBeef
+  name: corned beef and cabbage recipe
+  result: FoodMealCornedbeef
+  time: 15
+  group: Savory
+  solids:
+    FoodMeat: 1
+    FoodCabbage: 1
