--- a/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_offense_actions.yml
+++ b/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_offense_actions.yml
@@ -988,9 +988,10 @@
       sprite: _RMC14/Actions/xeno_actions.rsi
       state: tumble
     event: !type:XenoTumbleActionEvent
-    range: 2
+    range: 20
     useDelay: 10
     deselectOnMiss: false
+    checkCanAccess: false
     rotate: false
   - type: ActionBlockIfResting
   - type: XenoActionPlasma
