Add CLF uniform and armband (#6415)

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Uniforms/other.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Uniforms/other.yml
@@ -206,3 +206,15 @@
         color: "#C12D30"
         sprite: Clothing/Uniforms/Jumpsuit/color.rsi
       - state: overlay-inhand-right
+
+# CLF
+- type: entity
+  parent: RMCMarineUniformBase
+  id: RMCJumpsuitCLFSoldier
+  name: Colonial Liberation Front uniform
+  description: A stylish grey-green jumpsuit - standard issue for colonists. This version appears to have the symbol of the Colonial Liberation Front emblazoned in select areas.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/Uniforms/Survivor/clf.rsi
+  - type: Clothing
+    sprite: _RMC14/Objects/Clothing/Uniforms/Survivor/clf.rsi
