--- a/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_offense_actions.yml
+++ b/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_offense_actions.yml
@@ -934,3 +934,52 @@
     deselectOnMiss: false
   - type: ActionBlockIfResting
   - type: XenoOffensiveAction
+
+- type: entity
+  parent: ActionXenoBase
+  id: ActionXenoApprehend
+  name: Apprehend
+  description: Increases your movement speed and applies a slow on the next target you slash.
+  components:
+  - type: InstantAction
+    itemIconStyle: NoItem
+    icon:
+      sprite: _RMC14/Actions/xeno_actions.rsi
+      state: rav_enrage
+    event: !type:XenoCripplingStrikeActionEvent
+    useDelay: 18
+  - type: ActionBlockIfResting
+
+- type: entity
+  parent: ActionXenoBase
+  id: ActionXenoEviscerate
+  name: Eviscerate
+  description: Eviscerate nearby enemies after a short delay. Costs 1 rage stack.
+  components:
+  - type: InstantAction
+    itemIconStyle: NoItem
+    icon:
+      sprite: _RMC14/Actions/xeno_actions.rsi
+      state: rav_eviscerate
+    event: !type:XenoEviscerateActionEvent
+    useDelay: 23
+  - type: ActionBlockIfResting
+  - type: RMCDazeableAction
+
+- type: entity
+  parent: ActionXenoBase
+  id: ActionXenoClothesline
+  name: Clothesline
+  description: Flings a target, doing minimal damage and healing you. The amount healed is higher the more rage stacks you have.
+  components:
+  - type: EntityTargetAction
+    itemIconStyle: NoItem
+    icon:
+      sprite: _RMC14/Actions/xeno_actions.rsi
+      state: rav_clothesline
+    event: !type:XenoFlingActionEvent
+    range: 1.5
+    useDelay: 16
+    deselectOnMiss: false
+  - type: XenoOffensiveAction
+  - type: RMCDazeableAction
