--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
@@ -355,4 +355,16 @@
   - type: RMCDisarmable
   - type: StunOnExplosionReceived
   - type: DeafenWhileCrit
-
+  - type: XenoToggleChargingDamage
+    damage:
+      types:
+        Blunt: 0.25 # TODO RMC14 to the chest only
+    armorPiercingDamage:
+      types:
+        Blunt: 1
+    armorPiercing: 13
+    defaultMultiplier: 5
+    stageMultipliers:
+      8: 8
+  - type: XenoToggleChargingKnockback
+  - type: XenoToggleChargingParalyze
