Adds more Shark plushie colors

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Fun/toys.yml
@@ -32,6 +32,35 @@
 - type: entity
   parent: PlushieSharkGrey
   id: RMCPlushieSharkGrey
+  name: Grey shark soft toy
+  components:
+  - type: UseDelay
+    delay: 120
+  - type: EmitSoundOnLand
+    sound:
+      collection: ToyFall
+  - type: EmitSoundOnCollide
+    sound:
+      collection: ToyFall
+
+- type: entity
+  parent: PlushieSharkBlue
+  id: RMCPlushieSharkBlue
+  name: Blue shark soft toy
+  components:
+  - type: UseDelay
+    delay: 120
+  - type: EmitSoundOnLand
+    sound:
+      collection: ToyFall
+  - type: EmitSoundOnCollide
+    sound:
+      collection: ToyFall
+
+- type: entity
+  parent: PlushieSharkPink
+  id: RMCPlushieSharkPink
+  name: Pink shark soft toy
   components:
   - type: UseDelay
     delay: 120
