Fix Charger Crusher not having its stomp ability

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/crusher.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/crusher.yml
@@ -150,6 +150,7 @@
     - ActionXenoWatch
     - ActionXenoTailStab
     - ActionXenoToggleCharging
+    - ActionXenoStomp
     - ActionXenoTumble
     - ActionXenoRam
     - ActionXenoDevolve
