--- a/Resources/Prototypes/_RMC14/Entities/Structures/orbital_cannon.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/orbital_cannon.yml
@@ -32,6 +32,7 @@
     warheadTypes:
     - RMCOrbitalCannonWarheadExplosive
     - RMCOrbitalCannonWarheadCluster
+    - RMCOrbitalCannonWarheadIncendiary
   - type: Appearance
   - type: GenericVisualizer # TODO RMC14 animations
     visuals:
