--- a/Resources/Prototypes/_RMC14/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Fun/toys.yml
@@ -32,7 +32,7 @@
 - type: entity
   parent: PlushieSharkGrey
   id: RMCPlushieSharkGrey
-  name: Grey shark soft toy
+  suffix: RMC
   components:
   - type: UseDelay
     delay: 120
@@ -46,7 +46,7 @@
 - type: entity
   parent: PlushieSharkBlue
   id: RMCPlushieSharkBlue
-  name: Blue shark soft toy
+  suffix: RMC
   components:
   - type: UseDelay
     delay: 120
@@ -60,7 +60,7 @@
 - type: entity
   parent: PlushieSharkPink
   id: RMCPlushieSharkPink
-  name: Pink shark soft toy
+  suffix: RMC
   components:
   - type: UseDelay
     delay: 120
