Updated Cherry Jelly to use RMC tag (thank you exincore)

--- a/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
@@ -256,7 +256,7 @@
   solids:
     FoodBreadBun: 1
   reagents:
-    CMCherryJelly: 5
+    RMCCherryJelly: 5
 
 - type: microwaveMealRecipe #added to metamorph recipes
   id: RecipeBurgerMcguffin
@@ -586,7 +586,7 @@
   solids:
     FoodBreadPlainSlice: 1
   reagents:
-    CMCherryJelly: 5
+    RMCCherryJelly: 5
 
 - type: microwaveMealRecipe
   id: RecipeMoldyBreadSlice
