Fixed typo, added recipe for pretzels

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
@@ -400,7 +400,7 @@
     CabbageSeeds: 3
     GrapeSeeds: 3
     PumpkinSeeds: 3
-    CherrySeed: 3
+    CherrySeeds: 3
     RiceSeeds: 3
     GarlicSeeds: 3
     OnionSeeds: 3
