Fix rav tac map icon + make charger hidden evo announcements

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/crusher.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/crusher.yml
@@ -108,7 +108,6 @@
   id: RMCXenoCrusher
   components:
   - type: Xeno
-    role: CMXenoCrusher
     actionIds:
     - ActionXenoRest
     - ActionXenoRegurgitate
@@ -144,6 +143,7 @@
   - type: Xeno
     role: CMXenoCrusher
     ignorePheromones: Frenzy
+    hidden: true
     actionIds:
     - ActionXenoRest
     - ActionXenoRegurgitate
