--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/tse_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/tse_headsets.yml
@@ -1,7 +1,7 @@
 ﻿- type: radioChannel
   id: TSE
   name: chat-radio-tse
-  keycode: "q"
+  keycode: "'" # I hate this
   frequency: 1551
   color: "#9a1228"
   longRange: true
