--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Head/tse.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Head/tse.yml
@@ -10,6 +10,16 @@
 
 - type: entity
   parent: CMHeadBeret
+  id: RMCHeadBeretTSE
+  name: tse beret
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/Head/TSE/tse_beret.rsi
+  - type: Clothing
+    sprite: _RMC14/Objects/Clothing/Head/TSE/tse_beret.rsi
+
+- type: entity
+  parent: CMHeadBeret
   id: RMCHeadBeretTSEPA
   name: tsepa beret
   components:
